# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,8 @@ import healthRouter from "./health";
 import channelsRouter from "./channels";
 import videosRouter from "./videos";
 import overridesRouter from "./overrides";
+import translateRouter from "./translate";
+import sitemapRouter from "./sitemap";
 
 const router: IRouter = Router();
 
@@ -10,5 +12,7 @@ router.use(healthRouter);
 router.use(channelsRouter);
 router.use(videosRouter);
 router.use(overridesRouter);
+router.use(translateRouter);
+router.use(sitemapRouter);
 
 export default router;
